Fixed bad css. Works better on mobile now.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,4 @@
-/** Flex settings*/
-.flex {
-    display: flex;
-}
-
-.space-between {
-    justify-content: space-between;
-}
-
-.space-around {
-    justify-content: space-around;
-}
-
-.column {
-    flex-direction: column;
-}
-
-.row {
-    flex-direction: row;
+:host {
+    width: 100%;
+    height: 100%;
 }
