--- a/src/app/components/current-item/current-item.component.css
+++ b/src/app/components/current-item/current-item.component.css
@@ -2,7 +2,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
+
     color: white;
     background: rgba(39, 39, 39, 0.6);
     border-radius: 1px;
@@ -27,9 +28,22 @@ section:nth-of-type(2) > * {
     flex-basis: 150px;
     max-width: 200px;
     flex-grow: 1;
+    padding-left: 16px;
 }
 
 small {
     text-align: right;
     padding: 16px;
+}
+
+h1 {
+    text-align: center;
+}
+
+h4 {
+    text-align: center;
+}
+
+h5 {
+    padding-bottom: 4px;
 }
