--- a/src/app/components/search-form/search-form.component.css
+++ b/src/app/components/search-form/search-form.component.css
@@ -60,18 +60,22 @@ i {
 ul {
     width: calc(100vw - 32px);
     max-width: 600px;
+    max-height: 70%;
     position: absolute;
     transform: translate(0px, 60px);
     z-index: 2;
     box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.12);
     border-radius: 1px;
+    list-style-type: none;
+    padding: 0;
+    overflow: scroll;
 }
 
 li {
     background: white;
     padding: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 li:hover {
@@ -83,6 +87,7 @@ a {
     width: 100%;
     height: 100%;
     display: block;
+    text-decoration: none;
 }
 a:hover {
     background: rgb(204, 204, 204);
