--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,13 @@
     font-style: normal;
     font-weight: normal;
     width: 100%;
-/*     height: 100%; */
     box-sizing: border-box;
 }
-html
+
+html {
+    width: 100%;
+    height: 100%;
+}
 
 body {
     width: 100%;
